--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,16 +1,15 @@
-
 stages:
-  prepare_data:
-    vars:
-      - configs/config.yaml: artifacts
+  prepare_model:
     cmd: python src/stage_01_prepare.py --config configs/config.yaml --params params.yaml
     deps:
-      - src/stages_01_prepare.py
+      - src/stage_01_prepare.py
       - src/utils/common.py
-      - configs/config.yaml
-    # params:
-    #   - configs/config.yaml
-    #     - artifacts.model.model_dir
-    #     - artifacts.model.model_name
+      - configs/config.yaml 
+      - params.yaml 
     outs:
       - artifacts/model/
+  featurization:
+    cmd: python src/stage_02_featurization.py --config configs/config.yaml --params params.yaml
+    deps:
+      - configs/config.yaml 
+      - params.yaml
