train loop added

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -13,3 +13,17 @@ stages:
     deps:
       - configs/config.yaml 
       - params.yaml
+      - src/stage_02_featurization.py
+  training:
+    cmd: python src/stage_03_train.py --config configs/config.yaml --params params.yaml
+    deps:
+      - configs/config.yaml
+      - params.yaml
+      - src/stage_03_train.py
+      - src/stage_02_featurization.py
+      - src/stage_01_prepare.py
+      - artifacts/model/
+      - src/utils/metrics.py
+      - src/utils/common.py
+    
+
