--- a/params.yaml
+++ b/params.yaml
@@ -1,5 +1,9 @@
-random_state: 42
-SPLIT: (0.7, 0.3)
+RANDOM_STATE: 42
+TRAIN_SPLIT: 0.7
+TEST_SPLIT: 0.3
 EPOCH: 10
 BATCH_SIZE: 5
-IMAGE_SIZE: (224,224)
+IMAGE_SIZE: 
+  WIDTH: 224
+  HEIGHT: 224
+LEARNING_RATE: 0.001
