--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -11,6 +11,9 @@ artifacts:
     train_folder: training_set
     test_folder: test_set
 
+checkpoint:
+  checkpoint_name: resnet18_batch-size-5_epochs-5_learning_rate-0.001.pth
+
 plots:
   plots_dir: 'plots'
   itr_loss: 'itr_loss.json'
